feat: 결과 보고 싶은 사람 입력받는 기능 구현