@@ -6,13 +6,13 @@ import java.util.Set;
 
 public class Players {
 
-    private final List<Player> names;
+    private final List<Player> players;
 
     public Players(final List<String> input) {
         final List<Player> names = convertToNames(input);
         validateDuplication(names);
 
-        this.names = names;
+        this.players = names;
     }
 
     private List<Player> convertToNames(final List<String> input) {
@@ -28,14 +28,29 @@ public class Players {
     }
 
     public int getSize() {
-        return names.size();
+        return players.size();
     }
 
     public Player getName(int index) {
-        return this.names.get(index);
+        return this.players.get(index);
     }
 
-    public List<Player> getNames() {
-        return Collections.unmodifiableList(names);
+    public List<Player> getPlayers() {
+        return Collections.unmodifiableList(players);
+    }
+
+    public List<Player> find(final String input) {
+        if (input.equals("all")) {
+            return players;
+        }
+
+        return List.of(findOne(input));
+    }
+
+    private Player findOne(final String input) {
+        return players.stream()
+                .filter(player -> player.getName().equals(input))
+                .findAny()
+                .orElseThrow(() -> new IllegalArgumentException("[ERROR] 존재하지 않는 참가자이름입니다."));
     }
 }
